wp-content/themes/accelerate-theme-child/style.css
/*
 Theme Name:   Accelerate Theme Child
 Theme URI:    http://example.com/accelerate-theme-child/
 Description:  Accelerate Child Theme - Accelerate
 Author:       Santia Rivera
 Author URI:   http://example.com
 Template:     accelerate-theme
 Version:      1.0.0
 Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
 Text Domain:  accelerate-theme-child
*/

/*@import url("../accelerate-theme/style.css");*/

/* Homepage Styles */
.home-page {
    background: url("img/taxi-photo.jpg") no-repeat scroll left center / cover rgba(0, 0, 0, 0);
   
}

/*Start of masthead*/
#masthead {
    background: none repeat scroll 0 0 #45ac9d;
}

/* Start of styling of Blog*/

.blog-post {
	width: 50%;
}

.blog-post h4 {
	font-size: 16px;
	font-family: 'Montserrat';
	color: #a6a6a6;
	text-transform: uppercase;
}

.blog-post h2 {
	font-size: 24px;
	font-family: 'Montserrat';
	font-weight: bold;
}

.blog-post .read-more-link {
	font-size: 24px;
	font-family: 'Montserrat';
	font-weight: bold;
	color: #45ac9d;
	text-transform: uppercase;
}

/* Case Study Styles*/

article.case-study {

}

aside.case-study-sidebar {
	float:left;
	width:400px;
	margin-right: 40px;
}

div.case-study-imgs {
	float: right;
	width: 400px;
	/*clear: both;*/
	/*margin-top: -320px;*/
	margin-right: 90px;
	padding-bottom: 20px;
}

.case_imgs{
	margin-bottom: 20px;
}

p.info {
	color: #D3D3D3;
	margin-bottom: 10px;
}

p.client {
	margin-bottom: 24px;
	font-weight: bold;
}

/*Front page styling*/

.homepage-featured-work li {
	display: inline-block;
	width: 31%;
	margin-right: 3%;
}

/*remove margin from rightmost list item*/
.homepage-featured-work li:last-child {
	margin-right: 0;
}




/*article.case-study {
	overflow: auto;
}*/

/*ul.homepage-featured-work {
	align-content: center;
	display: inline;
	float: left;
}

li.individual-featured-work{
	align-content: center;
	display: inline-block;
	float: left;
}*/

